test/Fail/A/Issue1635.agda

module A.Issue1635 (A : Set₁) where

data Foo : Set where
  foo : Foo
